--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,10 @@ html, body, #app {
 }
 
 .w-20 {width: 20% !important;}
+.w-30 {width: 30% !important;}
 .w-80 {width: 80% !important;}
+.w-70 {width: 70% !important;}
+.w-60 {width: 60% !important;}
 .pr-21 {padding-right: 2.1rem !important;}
 .pl-21 {padding-left: 2.1rem !important;}
 .f-1 {font-size: 1rem !important;}
@@ -196,7 +199,12 @@ html, body, #app {
 
 .desc-header {
     font-weight: 800;
-    font-size: 2.5rem;
+    font-size: 1.9rem;
+}
+
+.desc-paragraph {
+    font-size: 0.7rem;
+    text-align: justify;
 }
 /*GENERAL*/
 .text-light {
@@ -377,9 +385,10 @@ html, body, #app {
     border-radius: 50%;
     background-color: transparent;
     top: 0;
-    right: -26px;
+    right: -35px;
     border: 1px solid white;
     cursor: pointer;
+    padding: 0 0.4rem;
 }
 
 .close-modal {
@@ -398,11 +407,180 @@ html, body, #app {
     margin-top: 14rem;
     padding: 1rem;
     font-size: 0.7rem;
-
 }
 
 .modal-box {
     display: none;
+    transition: all 5s;
 }
+
+.bank-nav li {
+    margin-bottom: 0.1rem;
+}
+
+.bank-nav a {
+    display: block;
+    padding-top: 0.5rem;
+    margin-right: 0.3rem;
+    margin-left: 0.3rem;
+}
+
+.bank-nav a:focus {
+    text-decoration: none;
+}
+.bank-nav a.active {
+    border-top: 2px solid rgb(156, 233, 41);
+}
+
+
+.br-2 {
+    border-right: 2px solid white;
+}
+
+.hide {
+    display: none;
+}
+
+.visible {
+    display: block;
+}
+
+.card-input-box {
+    width: 100%;
+    background: rgba(50, 55, 65, 0.65);
+    position: relative;
+    margin-top: 1.7rem;
+    margin-bottom: 1.4rem;
+}
+
+.card-input-box:before {
+    content: "";
+    width: 100%;
+    height: 0;
+    position: absolute;
+    top: -15px;
+    left: 0;
+    border-bottom: 15px solid rgba(50, 55, 65, 0.65);
+    border-left: 15px solid #eee0;
+    border-right: 15px solid #eee0;
+}  
+
+.card-input-box:after {
+    content: "";
+    width: 100%;
+    height: 0;
+    position: absolute;
+    bottom: -15px;
+    left: 0;
+    border-top: 15px solid rgba(50, 55, 65, 0.65);
+    border-left: 15px solid #eee0;
+    border-right: 15px solid #eee0;
+}
+
+.pay-with-card-txt {
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+    margin-bottom: 0.2rem;
+}
+
+.lil-ml {
+    margin-left: 0.7rem;
+}
+
+.pay-with-card {
+    width: 100%;
+    position: relative;
+    margin-bottom: 1rem;
+    z-index: 1;
+}
+
+.pay-with-card:before {
+    content: "";
+    width: 100%;
+    height: 0;
+    position: absolute;
+    top: -4px;
+    left: 0;
+    z-index: -1;
+    opacity: 0.8;
+    border-bottom: 16px solid rgb(50, 55, 65);
+    border-left: 15px solid #eee0;
+    border-right: 15px solid #eee0;
+}
+
+
+
+.pay-with-card:after {
+    content: "";
+    width: 100%;
+    height: 0;
+    position: absolute;
+    bottom: -5px;
+    opacity: 0.8;
+    left: 0;
+    z-index: -1;
+    border-top: 16px solid rgb(50, 55, 65);
+    border-left: 15px solid #eee0;
+    border-right: 15px solid #eee0;
+}
+
+.card-details-group label, .bank-details-group label {
+    font-size: 0.7rem;
+    align-self: center;
+}
+
+.card-details-form input, .bank-details-form select, .bank-details-form input {
+    background-color: rgba(20, 52, 99, 0.415);
+    font-size: 0.7rem;
+}
+
+.card-details-group #card-number, #bank-name , #account-number-box{
+    border-radius: 25px;
+    margin-bottom: 0.3rem;
+}
+
+.card-details-group input:not(#card-number) {
+    border-radius: 10px;
+    width: 35%;
+}
+
+#card-amount-box, #bank-amount-box, #withdraw-amount-box {
+    border-radius: 25px;
+}
+
+.top-up-btn {
+    background-color: #30503d;
+    border: 1px solid white;
+    color: white;
+    border-radius: 10px;
+    padding: 0.375rem 1.75rem;
+    margin-bottom: 1rem;
+}
+
+.pay-with-card .active-circle, .new-account-text .active-circle {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 1px solid rgb(221, 228, 240);
+    left: 11px;
+    top: 8px;
+}
+
+#sort-code-search, #sort-sport {
+    background-color: rgba(119, 95, 119, 0.489);
+    font-size: 0.9rem;
+    color: white;
+}
+
+#sort-code-search {
+    border-radius: 25px;
+}
+
+#sort-sport {
+    border-radius: 15px;
+}
+
+
 
 
