--- a/public/css/main.css
+++ b/public/css/main.css
@@ -142,6 +142,15 @@ html, body, #app {
     font-size: 1.5rem;
     color: gold;
 }
+
+.h2h.ball {
+    color: red;
+}
+
+.double-up.ball{
+    color: blue;
+}
+
 .ball i {
     margin: 0 auto;
 }
