--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -20,3 +20,17 @@
 .fit-content {
   height:fit-content
 }
+
+.grey {
+  color: gray;
+}
+
+.blue {
+  color: blue;
+}
+
+.scale:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari */
+  transform: scale(1.5);
+}
