--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,6 +60,10 @@ html, body, #app {
 
 .sexy-btn {
     border-radius: 30px;
+    display: inline-block;
+    background-color: rgba(245, 199, 11, 0.82);
+    font-size: 1rem;
+    color: rgb(255, 255, 255);
 }
 
 .stack-lead-btn a.active{
@@ -73,7 +77,7 @@ html, body, #app {
 }
 
 .amount-text {
-    background-color: #3ece13;
+    background-color: rgb(112, 173, 71);
     border-radius: 30px;
     border: 2px solid white;
 }
@@ -196,12 +200,12 @@ html, body, #app {
     background-position: center;
 }
 
-.bg-referal {
+/* .bg-referal {
     background-image: url(../images/bg_referal.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-}
+} */
 
 .bg-white {
     background-color: white;
@@ -408,19 +412,9 @@ html, body, #app {
 }
 
 .info-box {
-    position: absolute;
-    border-radius: 50%;
-    background-color: transparent;
-    top: -5px;
-    right: -22px;
-    border: 1px solid white;
     cursor: pointer;
-    font-style: oblique;
-    text-align: center;
     height: 20px;
     width: 20px;
-    color: white;
-    font-size: 1rem !important;
 }
 
 .close-modal {
@@ -770,7 +764,7 @@ html, body, #app {
     background: #a3a5a8c4;
     position: relative;
     margin-top: 2.5rem;
-    padding: 0.4rem 0.3rem;
+    padding: 0rem 0.3rem;
     word-break: break-all;
 }
 
@@ -872,6 +866,18 @@ border-right: 15px solid #eee0;
     padding: 0 .4rem;
     margin: .2rem;
 }
+
+.scroll-x {
+    overflow-x: auto;
+}
+
+div.fancy-top-bot:first-of-type {
+    margin-top: 1rem !important;
+}
+
+/* @media screen and (min-width: 768px) {
+
+} */
 
  
 
