--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,6 +76,22 @@ a.stock-ref:visited{
     outline: none;
 }
 
+.w-20 {width: 20% !important;}
+.w-30 {width: 30% !important;}
+.w-40 {width: 40% !important;}
+.w-80 {width: 80% !important;}
+.w-70 {width: 70% !important;}
+.w-60 {width: 60% !important;}
+.pr-21 {padding-right: 2.1rem !important;}
+.pl-21 {padding-left: 2.1rem !important;}
+.f-1 {font-size: 1rem !important;}
+.f-1-1 {font-size: 1.1rem !important;}
+.f-2 {font-size: 1.4rem !important;}
+.bt-1 {border-top: 1px solid black;}
+.f-0-9 {font-size: .9rem !important;}
+.f-0-6 {font-size: 0.6rem !important;}
+.b-0 {border: none;
+    outline: none;}
 .bg-purple {
     background-color: #073453;
     color: white;
@@ -90,6 +106,12 @@ a.stock-ref:visited{
     background-color: #3A8EC7 !important;
 }
 
+.bg-aqua {background-color: #3A8EC7 !important;}
+.bg-grey {background-color: #C7C7C7 !important;}
+.text-grey {color: rgb(128, 128, 128);}
+.text-yellow {color: yellow !important;}
+.text-red {color: red !important}
+.text-blue {color: blue !important}
 .bg-grey {
     background-color: #C7C7C7 !important;
 }
@@ -113,6 +135,10 @@ a.stock-ref:visited{
 
 .sexy-btn {
     border-radius: 30px;
+    display: inline-block;
+    background-color: rgba(245, 199, 11, 0.82);
+    font-size: 1rem;
+    color: rgb(255, 255, 255);
 }
 
 .stack-lead-btn a.active {
@@ -125,7 +151,7 @@ a.stock-ref:visited{
 }
 
 .amount-text {
-    background-color: #3ece13;
+    background-color: rgb(112, 173, 71);
     border-radius: 30px;
     border: 2px solid white;
 }
@@ -243,6 +269,7 @@ a.stock-ref:visited{
     background-image: url(../images/bg_home.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .bg-land {
@@ -258,6 +285,13 @@ a.stock-ref:visited{
     background-size: cover;
     background-position: center;
 }
+
+/* .bg-referal {
+    background-image: url(../images/bg_referal.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+} */
 
 .bg-white {
     background-color: white;
@@ -357,6 +391,7 @@ a.stock-ref:visited{
     background-image: url(../images/bg_login.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 /* Regiteration */
@@ -468,14 +503,9 @@ a.stock-ref:visited{
 }
 
 .info-box {
-    position: absolute;
-    border-radius: 50%;
-    background-color: transparent;
-    top: 0;
-    right: -35px;
-    border: 1px solid white;
     cursor: pointer;
-    padding: 0 0.4rem;
+    height: 20px;
+    width: 20px;
 }
 
 .close-modal {
@@ -665,3 +695,274 @@ a.stock-ref:visited{
 #sort-sport {
     border-radius: 15px;
 }
+
+.ref-stock-box {
+    width: 100%;
+    height: 100%;
+    background: #ffffff85;
+    position: relative;
+    margin: 0.2rem 1rem;
+}
+
+.ref-stock-box::after {
+    content: "";
+    width: 100%;
+    height: 0;
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    border-top: 10px solid #ffffff85;
+    border-left: 15px solid #eee0;
+    border-right: 14px solid #eee0;
+}
+
+.ref-amt-text {
+    display: block;
+    font-weight: bolder;
+    font-size: 1.5rem;
+    position: absolute;
+    bottom: -11px;
+}
+
+.stand-out {
+    font-size: 0.8rem !important;
+    color: #000000 !important;
+}
+
+.ref-inner-box {
+    height: 20px;
+    position: relative;
+    z-index: 1;
+    background-color: #476036;
+    padding-bottom: 1.1rem;
+    padding-left: 1rem;
+    font-size: 1.1rem;
+    font-weight: bolder;
+}
+
+
+
+.ref-inner-box::before {
+    content: "";
+    width: 100%;
+    height: 0;
+    position: absolute;
+    z-index: 0;
+    border-bottom: 8px solid #476036;
+    border-right: 17px solid #eee0;
+    top: -8px;
+    left: 0;
+}
+
+.ref-inner-box::after {
+    content: "";
+    width: 100%;
+    height: 0;
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    z-index: -1;
+    border-top: 10px solid #476036;
+    border-left: 17px solid #eee0;
+    border-right: 15px solid #476036;
+}
+
+.btn-referal {
+    text-transform: uppercase;
+    border-radius: 15px;
+    border: 1px solid #ffffff;
+    background-color: #476036;
+    color: #ffffff;
+}
+
+.time-stamp {
+    position: absolute;
+    top: -23px;
+    left: 0;
+    background-color: #476036;
+    color: #ffffff;
+}
+
+.ref-tab {
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: #26381a9c;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    padding: 0 .5rem;
+}
+
+.ref-tab a {
+    font-size: .8rem;
+}
+
+.ref-level-box {
+    position: relative;
+    border-width: 16px;
+    border-style: solid;
+    border-image: url("../images/border.png") 28% round;
+    -webkit-border-image: url("../images/border.png") 28% round;
+    -moz-border-image: url("../images/border.png") 28% round;
+    padding: 0 1rem;
+}
+
+.ref-username-box {
+    border-width: 16px;
+    border-style: solid;
+    border-image: url("../images/referral-username-box.png") 28% round;
+    -webkit-border-image: url("../images/referral-username-box.png") 28% round;
+    -moz-border-image: url("../images/referral-username-box.png") 28% round;
+    border-image-outset: 10px;
+    padding: 0 1rem;
+}
+
+.ref-level-progress {
+    height: .5rem;
+}
+
+.ref-progress-bar {
+    background-color: #476036;
+    position: relative;
+}
+
+.ref-progress-value {
+    color: #476036;
+    font-size: 11px;
+    position: absolute;
+    top: -5px;
+    right: -24px;
+    font-weight: bolder;
+}
+
+.ref-current-lvl-box {
+    position: absolute;
+    top: -39px;
+    left: -9px;
+    background-color: #476036;
+    color: #ffffff;
+    padding: 0 1rem;
+}
+
+.ref-table th, .ref-table td {
+    padding: 0;
+}
+
+.desc-box {
+    width: 100%;
+    /* height: 100px; */
+    background: #a3a5a8c4;
+    position: relative;
+    margin-top: 2.5rem;
+    padding: 0rem 0.3rem;
+    word-break: break-all;
+}
+
+.desc-box:before {
+    content: "";
+    width: 100%;
+    height: 0;
+    position: absolute;
+    top: -15px;
+    left: 0;
+    border-bottom: 15px solid #a3a5a8c4;
+    border-left: 15px solid #eee0;
+    border-right: 15px solid #eee0;
+}
+
+.desc-box:after {
+    content: "";
+    width: 100%;
+    height: 0;
+    position: absolute;
+    bottom: -15px;
+    left: 0;
+    border-top: 15px solid #a3a5a8c4;
+    border-left: 15px solid #eee0;
+    border-right: 15px solid #eee0;
+}
+
+
+
+.input-box::after {
+    bottom: -10px;
+    left: 0;
+    border-top: 10px solid #a3a5a8c4;
+    border-left: 15px solid #eee0;
+    border-right: 15px solid #eee0;
+}
+
+.input-box::before {
+    top: -10px;
+    left: 0;
+    border-bottom: 10px solid #a3a5a8c4;
+    border-left: 15px solid #eee0;
+    border-right: 15px solid #eee0;
+}
+
+.input-box input {
+    font-size: 1rem !important;
+}
+
+.input-box input:focus, .input-box textarea:focus {
+    outline: none;
+}
+
+.feed-back-list {
+    list-style-type: decimal;
+}
+
+.submit-feed {
+    border-radius: 15px;
+    border: 1px solid #ffffff;
+    background-color: #476633;
+    color: #ffffff;
+    padding: .3rem 0.1rem;
+}
+
+.question-box {
+    position: relative;
+    text-transform: uppercase;
+    color: #ffffff;
+    padding: 0 1rem;
+}
+.question-box * {
+    background-color: #2d4821;
+
+}
+
+.number {
+    position: absolute;
+    left: -20px;
+    top: 30px;
+    padding: .3rem .6rem;
+    border-radius: 50%;
+    font-size: .9rem;
+}
+
+.question {
+    border-radius: 6px;
+    padding: 1rem .3rem;
+    background-color: #2d4821c9;
+    border: 1px solid #ffffff;
+    margin-top: 1.5rem;
+}
+
+.option {
+    border-radius: 30px;
+    border: 1px solid #ffffff;
+    border-radius: 30px;
+    border: 1px solid #ffffff;
+    padding: 0 .4rem;
+    margin: .2rem;
+}
+
+.scroll-x {
+    overflow-x: auto;
+}
+
+div.fancy-top-bot:first-of-type {
+    margin-top: 1rem !important;
+}
+
+/* @media screen and (min-width: 768px) {
+} */
